--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter Product</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="filter-container">
@@ -12,11 +13,35 @@
             <button id="search-btn">Search </button>
         </div>
         <div class="category-container">
-            <div class="category-btn">All Products</div>
-            <div class="category-btn">Electronic</div>
-            <div class="category-btn">Clothing</div>
-            <div class="category-btn">Home & Garden</div>
+            <div class="category-btn" data-category="all">All Products</div>
+            <div class="category-btn" data-category="electronics">Electronics</div>
+            <div class="category-btn" data-category="clothing">Clothing</div>
+            <div class="category-btn" data-category="home">Home & Garden</div>
         </div>
     </div>
+    <div id="product-list">
+        <div class="product-item" data-category="electronics">
+            <h3>SmartPhone</h3>
+            <p>Description of SmartPhone product.</p>
+        </div>
+        <div class="product-item" data-category="clothing">
+            <h3>T-Shirt</h3>
+            <p>Description of T-Shirt product.</p>
+        </div>
+        <div class="product-item" data-category="home">
+            <h3>Coffee Maker</h3>
+            <p>Description of Coffee Maker product.</p>
+        </div>
+        <div class="product-item" data-category="electronics">
+            <h3>Laptop</h3>
+            <p>Description of Laptop product.</p>
+        </div>
+        <div class="product-item" data-category="clothing">
+            <h3>Hoodie</h3>
+            <p>Description of Hoodie product.</p>
+        </div>
+        
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
